--- a/index.html
+++ b/index.html
@@ -96,10 +96,12 @@
       <h2 class="stepTitle" id="stepTitle"></h2>
       <p class="riddle" id="riddle"></p>
 
-      <div class="row" id="inputRow">
-        <input id="answer" type="text" placeholder="Typ je antwoord…" autocomplete="off" />
-        <button id="check">Check</button>
-      </div>
+    <div class="row" id="inputRow">
+    <input id="answer" type="text" placeholder="Typ je antwoord…" autocomplete="off" />
+    <button id="check">Check</button>
+    <button id="help" style="opacity:.75">Hind nodig? 😇</button>
+    </div>
+
 
       <p class="msg" id="msg"></p>
 
