--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
     }
     .row{display:flex; gap:10px; margin-top:14px; flex-wrap:wrap;}
     input{
+      font-size:16px;  
       flex:1; min-width:220px;
       padding:12px 12px; border-radius:12px; border:1px solid var(--line);
       background:rgba(255,255,255,0.03); color:var(--text); outline:none;
