--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
       <p class="msg" id="msg"></p>
 
       <div class="footer">
-        <div>🧩 <span id="mood">Hint-hunt mode</span></div>
-        <div class="tiny">Spieken in de code? Mag… maar dan ben je officieel een schurk. 😄</div>
+        <div>🧩 <span id="mood">Hindje haar zoektocht</span></div>
+        <div class="tiny">Voor een Hint voor Hind, druk je maar op Hind - badum tss 😄</div>
       </div>
     </div>
   </div>
