--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>De Jacht naar Hind haar 25e verjaardagscadeau 🎁</title>
+  <title>Hind Hunt 🎁</title>
   <style>
     :root{
       --bg:#0b0f14; --card:#111826; --text:#e7eefc; --muted:#a7b3c8;
